# DynoChess

./: .gitignore  Cargo.toml
dyno_client/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dyno_client/src/: App.tsx  main.tsx
dyno_client/src/actions/: actionTypes.ts
dyno_client/src/components/: Board.tsx  BoardTile.tsx  Game.tsx  GameBoard.tsx  GameInfoPanel.tsx  GamePlayerInfo.tsx  PromotionModal.tsx
dyno_client/src/context/: AppContext.tsx
dyno_client/src/pages/: ErrorPage.tsx  GamePage.tsx  HomePage.tsx
dyno_client/src/reducers/: appReducer.ts
dyno_client/src/styles/: GameBoard.css  Match.css
dyno_client/src/types/: GameEnums.ts  GameSettingsAI.ts  GameState.ts  GameTypes.ts  Move.ts  PlayerInfo.ts
dyno_client/src/utils/: BoardHelpers.ts  ClassNames.ts
dyno_engine/: Cargo.toml
dyno_engine/src/: board.rs  eval.rs  frontend.rs  lib.rs  misc.rs  movegen.rs  perft.rs  search.rs
dyno_engine/src/Misc/: cmdline.rs  parse.rs
dyno_engine/src/board/: fen.rs  gamestate.rs  history.rs  utils.rs  zobrist.rs
dyno_engine/src/extra/: testsuite.rs  wizardry.rs
dyno_engine/src/movegen/: defs.rs  init.rs  magics.rs  movelist.rs
dyno_engine/src/search/: defs.rs  movesorting.rs
src/: board.rs  defs.rs  extra.rs  main.rs  movegen.rs  perft.rs  search.rs
src/Board/: defs.rs  fen.rs  gamestate.rs  history.rs  utils.rs
src/Eval/: psqt.rs
src/Misc/: bits.rs  cmdline.rs  parse.rs  print.rs
src/board/: defs.rs  playmove.rs
src/movegen/: create.rs  defs.rs  movelist.rs
src/search/: defs.rs
(+4 files in other folders)
