[package]
name = "dyno_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.3", features = ["small_rng"] }
rand_chacha = "0.3.0"
if_chain = "1.0.2"
clap = "2.33.3"
crossbeam-channel = "0.5.1"